--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ script:
 - cmake --build . --target test
 - cmake --build . --target package
 deploy:
-  provider: script
-  skip_cleanup: true
+	provider: script
+	skip_cleanup: true
+	on:
+		branch: main
   script:
   - curl -T helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uzhangnicholas:$BINTRAY_API_KEY "https://api.bintray.com/content/zhangnicholas/Otus-cpp/helloworld/$TRAVIS_BUILD_NUMBER/helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
